--- a/index.qmd
+++ b/index.qmd
@@ -41,3 +41,9 @@ trpavliuk\@gmail.com
 ::: {.callout-note style="color: grey"}
 ## saturday and sunday are weekends! {style="color: blue"}
 :::
+
+### Social media
+
+Instagram: [\@sugarfreeee\_\_](https://twitter.com/sugarfreeee___){style="color: purple"}
+
+Twitter: [\@sugarfreeee\_\_\_](https://www.instagram.com/sugarfreeee__/){style="color: blue"}
