--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,7 @@ Political & Social Values, Political Opinion, Electoral Behavior, Political & Ci
 
 ### Mail
 
-trpavliuk\@gmail.com
+trpavliuk{at}gmail{dot}com
 
 ### Phone (Telegram available)
 
